k8s/01-api-dev/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-portfolio-api-dev
  namespace: service-portfolio
  labels:
    app: service-portfolio-api-dev
    environment: development
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: service-portfolio-api-dev
    environment: development
